multiple post style added

--- a/Client/src/assets/styles/post.scss
+++ b/Client/src/assets/styles/post.scss
@@ -5,7 +5,8 @@
     margin: 10px;
     box-shadow: 0 0 5px rgba(240, 245, 244, 0.2);
     box-sizing: border-box;
-
+    margin-top: 60px;
+    margin-bottom: 60px;
     .img {
         float: right;
         overflow: hidden;
