--- a/Client/src/assets/styles/index.scss
+++ b/Client/src/assets/styles/index.scss
@@ -7,9 +7,9 @@
 
 .topnav {
   background-color: #0b0c10;
-  overflow: hidden;
+  width: 100%;
   display: flex;
-
+  position: fixed;
   .navbar {
     a {
       float: left;
@@ -59,14 +59,15 @@
   display: none;
   background-color: #1f2833;
   padding: 20px;
-  height: 100%;
   font-family: 'raleway';
   color: #c5c6c7;
   margin-left: 10%;
   margin-right: 10%;
   text-align: center;
-
+  
+  
   h1 {
+    margin-top: 100px;
     color: #45a29e;
     text-align: center;
     font-weight: bold;
