--- a/Client/src/assets/styles/index.scss
+++ b/Client/src/assets/styles/index.scss
@@ -5,49 +5,91 @@
   font-style: normal; // Font style (e.g., normal, italic)
 }
 
-.topnav {
-  background-color: #0b0c10;
-  width: 100%;
-  display: flex;
-  position: fixed;
-  .navbar {
-    a {
-      float: left;
-      color: #c5c6c7;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-      font-family: 'raleway';
-    }
 
-    a:hover {
-      background-color: #45a29e;
-      color: #c5c6c7;
-    }
+.navbar {
+  
+  background-color: #007fff;
+  padding-right:40% ;
+  
+  a {
+    
+    color: #000000;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    font-family: 'raleway';
 
-    &.active {
-      background-color: #45a29e;
-      color: #c5c6c7;
-    }
   }
 
-  .logo {
+  a:hover {
+    
+    box-shadow: #9497974f;
+    background-color: #0024471a;
+    color: #000000;
+    border-radius: 15px 15px 15px 15px;
+  }
+
+
+  .nav:active {
+
+    font-weight: bold;
+  }
+  
+}
+
+
+
+
+.about {
+  color: #ffffff;
+  background-color: #021d36;
+  text-align: center;
+
+  .name {
+    font-weight: 900;
+    font-size: 48px;
+
+  }
+
+  .description {
+    overflow: hidden;
+
+  }
+}
+
+.logo {
+  background-color: #007fff;
+
+  img {
     width: 20%;
     height: auto;
     margin-right: 40%;
     margin-left: 5%;
     margin-top: 0.5%;
-    margin-bottom: 1%;
     width: 405px;
     height: 56px;
-    border-radius: 5px; // Add rounded corners
+    border-radius: 5px;
+
   }
 }
 
+.logo2 {
+  width: 20%;
+  height: auto;
+  margin-right: 40%;
+  margin-left: 40%;
+  margin-top: 0.5%;
+  width: 160px;
+  height: 120px;
+  border-radius: 5px;
+
+}
+
+
 .footer {
   background-color: #0b0c10;
-  color: #c5c6c7;
+  color: #ffffff;
   width: 100%;
   bottom: 0;
   position: fixed;
@@ -55,19 +97,21 @@
   text-align: center;
 }
 
-#home, #about, #contact {
+#home,
+#contact {
   display: none;
-  background-color: #1f2833;
+  background-color: #021d36;
   padding: 20px;
   font-family: 'raleway';
   color: #c5c6c7;
   margin-left: 10%;
   margin-right: 10%;
+
   text-align: center;
-  
-  
+
+
   h1 {
-    margin-top: 100px;
+
     color: #45a29e;
     text-align: center;
     font-weight: bold;
@@ -75,26 +119,13 @@
 }
 
 .body {
-  background-color: #1f2833;
-  font-family: 'raleway';
 
-  
-  
+
+  font-family: 'raleway';
 }
-.contact-icon{
+
+.contact-icon {
   width: 200px;
   height: 200px;
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
