--- a/Client/src/assets/styles/index.scss
+++ b/Client/src/assets/styles/index.scss
@@ -45,7 +45,8 @@
   color: #ffffff;
   background-color: #021d36;
   text-align: center;
-
+  padding-top: 2%;
+  padding-bottom: 2%;
   .name {
     font-weight: 900;
     font-size: 48px;
@@ -110,18 +111,14 @@
   text-align: center;
 
 
-  h1 {
 
-    color: #45a29e;
-    text-align: center;
-    font-weight: bold;
-  }
 }
 
 .body {
-
+  background-color: #0f172a;
 
   font-family: 'raleway';
+  
 }
 
 .contact-icon {
